--- a/buildspec.yml
+++ b/buildspec.yml
@@ -31,6 +31,7 @@ phases:
 artifacts:
   files:
     - target/surveyshrike-api-0.0.1-SNAPSHOT.jar
+    - appspec.yml
   discard-paths: yes
 cache:
   paths:
