Settings for codedeploy + updates on API

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -31,6 +31,10 @@ phases:
 artifacts:
   files:
     - target/surveyshrike-api-0.0.1-SNAPSHOT.jar
+    - appspec.yml
+    - scripts/*
+    - src/main/resources/application.properties
+    - src/main/resources/import.sql
   discard-paths: yes
 cache:
   paths:
