--- a/appspec.yml
+++ b/appspec.yml
@@ -2,4 +2,12 @@ version: 0.0
 os: linux
 files:
   - source: ./surveyshrike-api-0.0.1-SNAPSHOT.jar
-    destination: /tmp
+    destination: ./
+  - source: ./application.properties
+    destination: ./
+  - source: ./import.sql
+    destination: ./
+hooks:
+  ApplicationStart:
+    - location: scripts/start_application
+      timeout: 300
