--- a/appspec.yml
+++ b/appspec.yml
@@ -7,7 +7,9 @@ files:
     destination: /tmp
   - source: ./import.sql
     destination: /tmp
+  - source: ./start_application
+    destination: /tmp
 hooks:
   ApplicationStart:
-    - location: scripts/start_application
+    - location: start_application
       timeout: 300
