--- a/appspec.yml
+++ b/appspec.yml
@@ -1,15 +1,15 @@
 version: 0.0
 os: linux
 files:
-  - source: ./surveyshrike-api-0.0.1-SNAPSHOT.jar
+  - source: /target/surveyshrike-api-0.0.1-SNAPSHOT.jar
     destination: /tmp
-  - source: ./application.properties
+  - source: /src/main/resources/application.properties
     destination: /tmp
-  - source: ./import.sql
+  - source: /src/main/resources/import.sql
     destination: /tmp
-  - source: ./start_application.sh
+  - source: /scripts/start_application.sh
     destination: /tmp
 hooks:
   ApplicationStart:
-    - location: start_application.sh
+    - location: scripts/start_application.sh
       timeout: 300
