--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,8 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+
+jwt.secret=h890jPo09*n
+
+google.client-id=561673755028-4jo9u0c2c0fmro007t01l8to4fa16lcn.apps.googleusercontent.com
